School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/syntax/valid/OwnTests_stepA/valid/test_arithmetic.deca
// Tokens attendus: OBRACE, IDENT, EQUALS, INT, TIMES, PLUS, SEMI, SLASH, OPARENT, MINUS, CPARENT, CBRACE
// Fichier source avec des opérations arithmétiques
{
    int x = 10 + 5 * 2;
    int result = x / (3 - 1);
}