School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/syntax/invalid/OwnTests_stepA/invalid/lexer/test_operator.deca
// Fichier source avec une erreur syntaxique délibérée
{
    int x = 10 + *' 2; // Erreur : opérateur * mal placé
    int result = x / (3 - 1);
}